2010-04-24 Harri Pitkänen <hatapitk@iki.fi>
	* Reimplement capitalization checks in grammar checker with state machine.
	* Handle parenthesis and quotes better in grammar checker.
	* Add option for printing input line number in voikkogc.

2010-04-23 Harri Pitkänen <hatapitk@iki.fi>
	* Move cache size setting from voikkoInit to integer option
	  VOIKKO_SPELLER_CACHE_SIZE.

2010-04-18 Harri Pitkänen <hatapitk@iki.fi>
	* Modify voikkoInit to take a BCP 47 language tag instead of variant name.
	* Add function voikko_dict_language to query the language of a dictionary.

2010-04-17 Harri Pitkänen <hatapitk@iki.fi>
	* Run basic tests on "make check".
	* Add function voikkoListSupportedLanguages for listing languages that
	  are supported in spell checking.

2010-04-06 Flammie Pirinen <flammie@iki.fi>
	* Updated HFST integration including suggestion generator
	  and hyphenator.

2010-04-04 Harri Pitkänen <hatapitk@iki.fi>
	* Add multi thread mode to voikkospell.

2010-03-29 Harri Pitkänen <hatapitk@iki.fi>
	* Do not include config.h unless HAVE_CONFIG_H is defined.

2010-03-28 Andris Pavenis <andris.pavenis@iki.fi>
	* Add MSVC solution file.
	* Add MSVC projects for voikkospell, voikkohyphenate, voikkogc 
	* Update libvoikko MSVC project including rearranging sources for easier maintenance.

2010-03-27 Harri Pitkänen <hatapitk@iki.fi>
	* Complete API refactoring. Introduce thread safe API and implement a
	  a compatibility layer that supports the old API.
	* Change the Python module to use new API. Remove libvoikko.init().

2010-03-21 Andris Pavenis <andris.pavenis@iki.fi>
	* Stop using degree sign in source. Fixes serious problems
	  with MSVC 2005.

2010-03-06 Harri Pitkänen <hatapitk@iki.fi>
	* Implement FixedResultSpeller.
	* VOIKKO_OPT_IGNORE_NUMBERS now only affects spell checking.
	  Previously it affected spelling suggestions too, but this behaviour made
	  it difficult independently implement spell checkers and spelling suggestions.